--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -4,6 +4,16 @@
     
 }
 
+.jumbotron {
+    background-image: url(../images/header.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 350px;
+    width: 100%;
+    color: #fff;
+}
+
 hr {
     border-top: 3px solid #999;
 }
@@ -14,10 +24,6 @@ hr {
     box-shadow: 3px 7px 24px -2px rgba(0,0,0,0.75);
 }
 
-
-
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
 .loading-page {
 	position: fixed;
 	left: 0px;
@@ -28,12 +34,30 @@ hr {
 	background: url(../images/Preloader_9.gif) center no-repeat #fff;
 }
 
-.loading-div {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url(../images/Preloader_9.gif) center no-repeat #fff;
+#fade-div {
+    background-color: lightgreen !important;
+    opacity: 0;
+}
+
+.feature:hover {
+    box-shadow: 1px 2px 2px 5px #ccc;
+}
+
+.image-container {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+.image-container .after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    color: #FFF;
+}
+.image-container:hover .after {
+    display: block;
+    background: rgba(0, 0, 0, .6);
 }
