--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -30,7 +30,7 @@
 
 /* Opening Image and text */
 .opening-image {
-    background-image: url(../images/header.jpg);
+    background-image: url(../images/macbook.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
